--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #eff7f6;
 }
 
 a {
@@ -23,4 +24,8 @@ a {
     color: white;
     background: black;
   }
+}
+.css-1vw5i9y-MuiButtonBase-root-MuiTab-root {
+  font-size: 18px !important;
+  font-weight: 800 !important;
 }
