--- a/src/pages/product/option/style.module.scss
+++ b/src/pages/product/option/style.module.scss
@@ -3,9 +3,13 @@
   line-height: 25px;
   font-size: 16px;
 }
-.images{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 0;
+.images {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 35px 0;
+  gap: 70px;
+  box-shadow: 0 2px 8px rgb(0 0 0 / 30%);
+  border-radius: 15px;
+  margin: 15px;
 }
